--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,12 @@ dependencies {
     // ktor server
     implementation 'io.ktor:ktor-server-core:1.6.3'
     implementation 'io.ktor:ktor-server-netty:1.6.3'
+    implementation 'io.ktor:ktor-gson:1.6.3'
 
     // logging
     implementation 'ch.qos.logback:logback-classic:1.2.6'
     implementation 'ch.qos.logback:logback-core:1.2.6'
+
+    // telegram api
+    implementation 'com.github.pengrad:java-telegram-bot-api:5.2.0'
 }
