--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 bot.token=
-bot.webhook=
+bot.webhook.host=
+bot.webhook.endpoint=
 
-server.port=8080
-server.host=localhost
+server.host=
+server.port=
