--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,10 @@
 bot.token=
 bot.webhook.host=
-bot.webhook.endpoint=
+bot.webhook.endpoint=/webhook
 
-server.port=
+server.port=8080
 
-mongo.host=
-mongo.port=
-mongo.database=
-mongo.collection.keyboards=
+mongo.host=mongo-db
+mongo.port=27018
+mongo.database=data
+mongo.collection.keyboards=keyboards
