--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,3 +8,5 @@ mongo.host=mongo-db
 mongo.port=27017
 mongo.database=data
 mongo.collection.keyboards=keyboards
+
+integrations.ml=http://ml.thecyprus.co/ask
