objects storaging update

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,9 +4,9 @@ bot.webhook.endpoint=/webhook
 
 server.port=8080
 
-mongo.host=mongo-db
-mongo.port=27017
-mongo.database=data
-mongo.collection.keyboards=keyboards
+mongo.host=
+mongo.user=
+mongo.password=
+mongo.database=
 
-integrations.ml=http://ml.thecyprus.co/ask
+integrations.ml=
