--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     // mongo
     implementation("org.mongodb:mongo-java-driver:3.12.10")
 
+    // redis
+    implementation ("redis.clients:jedis:4.3.1")
+
     // json-schema
     implementation("com.github.java-json-tools:json-schema-validator:2.2.14")
 
