requests related actions update

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,16 @@
 bot.token=
 bot.webhook.host=
-bot.webhook.endpoint=/webhook
+bot.webhook.endpoint=
 
-server.port=8080
+server.port=
 
 mongo.host=
 mongo.user=
 mongo.password=
 mongo.database=
+
+redis.host=
+redis.port=
+redis.user=
+redis.password=
+redis.prefix=
