--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 bot.token=
 bot.webhook.host=
-bot.webhook.endpoint=
+bot.webhook.endpoint=/webhook
 
-server.port=
+server.port=8080
 
 mongo.host=
 mongo.user=
